--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,7 @@
-@import url(./_reset.scss);
+@import '_colors.scss';
+@import '_root.scss';
+@import '_reset.scss';
+@import '_mixins.scss';
+@import '_fonts.scss';
+@import '_text.scss';
+@import '_background.scss';
