extend utility classnames

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,6 +1,6 @@
 $colors: (
     'white': #FFFFFF,
     'black': #000000,
-    'primary': #8EDF21,
-    'secondary': #B9D800,
+    'primary': #D3FD53,
+    'secondary': #25A043,
 );
