--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,13 @@
 @import '_colors.scss';
+@import '_steps.scss';
 @import '_root.scss';
 @import '_reset.scss';
 @import '_mixins.scss';
 @import '_fonts.scss';
 @import '_text.scss';
 @import '_background.scss';
+@import '_margin.scss';
+@import '_padding.scss';
+@import '_flex.scss';
+@import '_widths.scss';
+@import '_common.scss';
