--- a/src/components/TextField/textField.module.scss
+++ b/src/components/TextField/textField.module.scss
@@ -32,7 +32,7 @@
         content: '*';
         display: flex;
         align-content: center;
-        color: red;
+        color: var(--red);
         font-size: 0.8rem;
         height: 100%;
         position: absolute;
