--- a/src/components/Checkbox/checkbox.module.scss
+++ b/src/components/Checkbox/checkbox.module.scss
@@ -25,6 +25,11 @@
         }
     }
 
+    &.disabled {
+        opacity: 0.5;
+        cursor: unset;
+    }
+
 
     input {
         display: none;
