--- a/src/assets/styles/_text.scss
+++ b/src/assets/styles/_text.scss
@@ -1,3 +1,11 @@
+$aligment: 'left', 'right', 'center';
+
 .text {
     @include generateColorClasses('color');
+
+    @each $a in $aligment {
+        &--#{$a} {
+            text-align: #{$a};
+        }
+    }
 }
