--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -1,14 +1,23 @@
 .btn {
     padding: 0.33rem 0.66rem;
     color: var(--primary);
-    border: 1px solid var(--primary);
-    border-radius: 4px;
     background-color: color-mix(in srgb, var(--black) 50%, transparent);
+    border: none;
     cursor: pointer;
-    transition: all 0.5s ease;
+    transition: all 0.5s ease;    
+
+    &.bordered {
+        border: 1px solid var(--primary);
+        border-radius: 4px;
+    }
 
     &:hover {
         color: var(--white);
         border-color: var(--white);
+    }
+
+    &:disabled {
+        opacity: 0.5;
+        cursor: auto;
     }
 }
