Update nav cmp.

--- a/src/components/molecules/Nav/Nav.module.scss
+++ b/src/components/molecules/Nav/Nav.module.scss
@@ -1,22 +1,25 @@
-
-.navLink {
-    border: 1px solid transparent;
-    text-decoration: none;
-    transition: border 0.5s ease;
-
-    span {
-        transition: color 0.5s ease;
-    }
-
-    &.active {
-        border-color: var(--primary);
-    }
-
-    &:hover {
-        border-color: var(--white);
-
+.menu {
+    list-style: none;
+    
+    .navLink {
+        border: 1px solid transparent;
+        text-decoration: none;
+        transition: border 0.5s ease;
+    
         span {
-            color: var(--white);
+            transition: color 0.5s ease;
         }
-    }
+    
+        &.active {
+            border-color: var(--primary);
+        }
+    
+        &:hover {
+            border-color: var(--white);
+    
+            span {
+                color: var(--white);
+            }
+        }
+    }    
 }
