--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -18,6 +18,7 @@ $ai: (
   'center': center,
   'stretch': stretch,
 );
+$grow: 1, 2;
 
 .flex {
     display: flex;
@@ -50,6 +51,14 @@ $ai: (
     @each $name, $value in $ai {
         &.ai-#{$name} {
             align-items: $value;
+        }
+    }
+
+    .grow {
+        @each $value in $grow {
+            &--#{$value} {
+                flex-grow: $value;
+            }
         }
     }
 }
