Complete locations/episodes pages
- update. Move CharacterCard cmpnt to organism. updt test
- enhance PrintString cmpnt
- enhance Grid cmpnt
- add flex align self utility class names

--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -18,6 +18,12 @@ $ai: (
   'center': center,
   'stretch': stretch,
 );
+$as: (
+    'start': flex-start,
+    'end': flex-end,
+    'center': center,
+    'stretch': stretch,
+);
 $grow: 1, 2;
 
 .flex {
@@ -58,6 +64,14 @@ $grow: 1, 2;
         @each $value in $grow {
             &--#{$value} {
                 flex-grow: $value;
+            }
+        }
+    }
+
+    .as {
+        @each $name, $value in $as {
+            &-#{$name} {
+                align-self: $value;
             }
         }
     }
